# qute-lsp

./: Cargo.toml  README.md  flake.nix  justfile
plugins/jetbrains/: build.gradle.kts  settings.gradle.kts
plugins/jetbrains/src/main/kotlin/ch/micmine/qutelsp/: QuteLspPreload.kt
plugins/vscode/: package-lock.json  package.json
plugins/vscode/client/: package.json
plugins/vscode/client/src/: extension.ts
plugins/vscode/client/src/test/: definition.test.ts  helper.ts  runTest.ts
plugins/vscode/client/testFixture/src/main/resources/templates/: index.html  messages.html
src/: completion.rs  config.rs  extraction.rs  file_utils.rs  main.rs  parser.rs
src/parser/: commandargs.rs  complete.rs  document.rs  fragemnt.rs  html_utils.rs  include.rs  mod.rs  route.rs  route_completion.rs  route_definiton.rs
test/: BasicResource.java  BasicResourceComments.java
