[package]
name = "qute-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
dashmap = "5.5.3"
ropey = "1.6.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
