[package]
name = "qute-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20.0"
dashmap = "5.5.3"
ropey = "1.6.1"
tree-sitter = "0.20.10"
tree-sitter-html = "0.19.0"
serde_json = "1.0.108"

[dev-dependencies]
pretty_assertions = "1.4.0"
